[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1.6.0", features = ["server"] }
sqlx = { version = "0.8.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"
